tests/ui/union-not-struct.stderr
error: TypeStateBuilder only supports structs, not unions
 --> tests/ui/union-not-struct.rs:5:1
  |
5 | / union NotAStruct {
6 | |     field1: u32,
7 | |     field2: f32,
8 | | }
  | |_^

error[E0599]: no function or associated item named `builder` found for union `NotAStruct` in the current scope
  --> tests/ui/union-not-struct.rs:11:33
   |
5  | union NotAStruct {
   | ---------------- function or associated item `builder` not found for this union
...
11 |     let _instance = NotAStruct::builder()
   |                                 ^^^^^^^ function or associated item not found in `NotAStruct`
